--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cpu-stat": "2.0.1",
     "connect": "3.7.0",
     "cors": "2.8.5",
-    "jsonwebtoken": "8.5.1"
+    "jsonwebtoken": "8.5.1",
+    "express": "4.17.1"
   },
   "author": "",
   "license": "ISC"
